make searchbox and add entry input layout correctly so that they don't overlap other elements

--- a/app/app.css
+++ b/app/app.css
@@ -161,23 +161,33 @@ h1 {
 }
 
 #entries_searchbox {
-	margin: 0;
+	margin: 1px;
 	padding: 0;
 	border: none;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	width: 100%;
-	height: 13px;
+	outline: none;
+	width: auto;
+	height: 21px;
 	background-color: white;
 }
 
-#addEntryForm {
+#add_entry_form_container {
 	position: absolute;
-	bottom: 11px;
-	height: 13px;
-	border: 0;
+	bottom: 0px;
+	left: 0;
 	padding: 0;
-	margin: 0;
+	width: 100%;
+	height: 23px;
+	background-color: white;
+}
+
+#add_entry_input {
+	margin: 1px;
+	padding: 0;
+	border: none;
+	outline: none;
+	width: auto;
+	height: 21px;
+	background-color: white;
 }
 
 
